--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint src/",
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development --open"
+    "start": "webpack serve --mode development --open",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@babel/core": "7.21.4",
@@ -16,6 +17,7 @@
     "css-loader": "6.7.3",
     "eslint": "8.38.0",
     "eslint-config-htmlacademy": "9.0.0",
+    "gh-pages": "5.0.0",
     "html-webpack-plugin": "5.5.1",
     "style-loader": "3.3.2",
     "webpack": "5.79.0",
